fix: anchor positioning The anchor positioning is 40px more than it actually is, resulting in the header not being visible when the link is clicked.

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -332,6 +332,11 @@ article li {
   margin-top: 40px;
 }
 
+a.anchor {
+  /* 120px = origial 80px + margin-top 40px */
+  top: -120px; 
+}
+
 /* Responsive */
 
 @media only screen and (min-width: 1024px) {
